modified:   css/styles.css 	modified:   index.html 	new file:   index_zz.html

--- a/index_zz.html
+++ b/index_zz.html
@@ -97,7 +97,7 @@
       <div class="header__body container">
         <a class="logo" href="#">
           <span class="logo__web span">Web</span>
-          <span class="span">Studio</span>
+          <span class="logo__studio">Studio</span>
         </a>
         <nav class="navigation">
           <ul class="navigation__list">
@@ -263,67 +263,65 @@
               <img src="images/team/teamFirst.jpg" alt="John Doe" width="270" height="260" />
               <div class="outeam__name">John Doe</div>
               <div class="outeam__role">Product Designer</div>
-              <div class="ourteam__socials">
-                <div class="socials">
-                  <div class="socials__area socials--body transition">
-                    <div class="socials__subarea socials--body transition">
-                      <svg class="socials__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
-                      </svg>
-                    </div>
+              <div class="socials">
+                <div class="socials__area socialsbody transition">
+                  <div class="socials__subarea transition">
+                    <svg class="socials__icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
                   </div>
-                  <div class="socials__area socials--body transition">
-                    <div class="socials__subarea socials--body transition">
-                      <svg class="socials__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
-                    </div>
+                </div>
+                <div class="socials__area socials--body transition">
+                  <div class="socials__subarea transition">
+                    <svg class="socials__icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
                   </div>
-                  <div class="socials__area socials--body transition">
-                    <div class="socials__subarea socials--body transition">
-                      <svg class="socials__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
-                    </div>
+                </div>
+                <div class="socials__area socials--body transition">
+                  <div class="socials__subarea transition">
+                    <svg class="socials__icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
                   </div>
-                  <div class="socials__area socials--body transition">
-                    <div class="socials__subarea socials--body transition">
-                      <svg class="socials__icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
-                    </div>
+                </div>
+                <div class="socials__area socials--body transition">
+                  <div class="socials__subarea transition">
+                    <svg class="socials__icon" width="20" height="20">
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
                   </div>
                 </div>
               </div>
             </li>
-            <li class="ourteam__item">
+            <li class="ourteam__list">
               <img src="images/team/teamSecond.jpg" alt="John Doe" width="270" height="260" />
               <div class="outeam__name">John Doe</div>
               <div class="outeam__role">Frontend Developer</div>
               <div class="socials">
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
@@ -331,34 +329,34 @@
                 </div>
               </div>
             </li>
-            <li class="ourteam__item">
+            <li class="ourteam__list">
               <img src="images/team/teamThird.jpg" alt="John Doe" width="270" height="260" />
               <div class="outeam__name">John Doe</div>
               <div class="outeam__role">Marketing</div>
               <div class="socials">
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
@@ -366,34 +364,34 @@
                 </div>
               </div>
             </li>
-            <li class="ourteam__item">
+            <li class="ourteam__list">
               <img src="images/team/teamFourth.jpg" alt="John Doe" width="270" height="260" />
               <div class="outeam__name">John Doe</div>
               <div class="outeam__role">UI Designer</div>
               <div class="socials">
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </div>
                 </div>
                 <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
+                  <div class="socials__subarea transition">
                     <svg class="socials__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
@@ -404,35 +402,35 @@
           </ul>
         </div>
       </section>
-      <section class="container ourclients section">
-        <h2 class="ourclients__title">Nasi klienci</h2>
-        <div class="ourclients__section">
-          <div class="client1 ourclients-border button">
+      <section class="container ourclients-section section">
+        <h2 class="ourclients-h2">Nasi klienci</h2>
+        <div class="ourclients-div">
+          <div class="ourclients-div1 ourclients-border button">
             <svg width="41" height="47" class="icon-address transition">
               <use href="./images/icons.svg#icon-Union"></use>
             </svg>
           </div>
-          <div class="client2 ourclients-border button">
+          <div class="ourclients-div2 ourclients-border button">
             <svg width="40" height="52" class="icon-address transition">
               <use href="./images/icons.svg#icon-group1"></use>
             </svg>
           </div>
-          <div class="client3 ourclients-border button">
+          <div class="ourclients-div3 ourclients-border button">
             <svg width="43" height="41" class="icon-address transition">
               <use href="./images/icons.svg#icon-Object1"></use>
             </svg>
           </div>
-          <div class="client4 ourclients-border button">
+          <div class="ourclients-div4 ourclients-border button">
             <svg width="84" height="41" class="icon-address transition">
               <use href="./images/icons.svg#icon-group2"></use>
             </svg>
           </div>
-          <div class="client5 ourclients-border button">
+          <div class="ourclients-div5 ourclients-border button">
             <svg width="63" height="45" class="icon-address transition">
               <use href="./images/icons.svg#icon-group3"></use>
             </svg>
           </div>
-          <div class="client6 ourclients-border button">
+          <div class="ourclients-div6 ourclients-border button">
             <svg width="94" height="44" class="icon-address transition">
               <use href="./images/icons.svg#icon-Object4"></use>
             </svg>
@@ -441,60 +439,58 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer__area">
+      <div class="container footer-div">
         <div>
-          <div class="footer_logo">
+          <div class="logo_bottom">
             <a class="logo" href="#">
               <span class="logo__web span">Web</span>
-              <span class="span logo-white">Studio</span>
+              <span class="logo__studio logo-white">Studio</span>
             </a>
           </div>
           <address>
-            <div class="highlight footer__address address-white transition">
+            <div class="highlight address address-white transition">
               m. Warszawa, Aleje Jerozolimskie 21
             </div>
             <a
-              class="highlight transition footer__address address-grey address-mailto_padding"
+              class="highlight transition address address-grey address-mailto_padding"
               href="mailto:info@example.com"
             >
               info@example.com
             </a>
-            <a class="highlight transition footer__address address-grey" href="tel:+48111111111"
+            <a class="highlight transition address address-grey" href="tel:+48111111111"
               >+48 111 111 111</a
             >
           </address>
         </div>
-        <div class="footer__socialarea">
-          <p class="footer__comment">DOŁĄCZ DO NAS</p>
-          <div class="footer__socials">
-            <div class="socials">
-              <div class="socials__area socials__area-greybgrd transition">
-                <div class="socials__subarea">
-                  <svg class="socials__icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </div>
+        <div class="footer-div2">
+          <p class="footer-p">DOŁĄCZ DO NAS</p>
+          <div class="footer-div3">
+            <div class="footer-div4 transition">
+              <div class="footer-div5">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
               </div>
-              <div class="socials__area transition">
-                <div class="socials__subarea">
-                  <svg class="socials__icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </div>
+            </div>
+            <div class="footer-div4 transition">
+              <div class="footer-div5">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
               </div>
-              <div class="socials__area transition">
-                <div class="socials__subarea">
-                  <svg class="socials__icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </div>
+            </div>
+            <div class="footer-div4 transition">
+              <div class="footer-div5">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
               </div>
-              <div class="socials__area transition">
-                <div class="socials__subarea">
-                  <svg class="socials__icon" width="20" height="20">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </div>
+            </div>
+            <div class="footer-div4 transition">
+              <div class="footer-div5">
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
               </div>
             </div>
           </div>
@@ -520,7 +516,7 @@
               </label>
               <button class="footer-form-button" type="submit">
                 <span class="footer-form-div">Zapisz się</span>
-                <svg class="socials__icon" width="24" height="24">
+                <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-icon-send"></use>
                 </svg>
               </button>
