--- a/portfolio.html
+++ b/portfolio.html
@@ -71,218 +71,218 @@
         </div>
         <div>
           <ul class="portfolio">
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/webPageOnLaptop.jpg"
                     alt="Obraz strony internetowej na laptopie"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Technocrack</h2>
-                    <p class="portfolio-p">Strona internetowa</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Technocrack</h2>
+                    <p class="portfolio__comment">Strona internetowa</p>
                   </hgroup>
                 </section>
               </div>
             </li>
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/basketballPlayers.jpg"
                     alt="Koszykarze"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Grafika New Orlean vs Golden Star</h2>
-                    <p class="portfolio-p">Dizajn</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Grafika New Orlean vs Golden Star</h2>
+                    <p class="portfolio__comment">Dizajn</p>
                   </hgroup>
                 </section>
               </div>
             </li>
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/logoOfRestaurant.jpg"
                     alt="Logo restauracji"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Restauracja Seafood</h2>
-                    <p class="portfolio-p">Aplikacja</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Restauracja Seafood</h2>
+                    <p class="portfolio__comment">Aplikacja</p>
                   </hgroup>
                 </section>
               </div>
             </li>
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/headphones.jpg"
                     alt="Słuchawki"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Projekt Prime</h2>
-                    <p class="portfolio-p">Marketing</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Projekt Prime</h2>
+                    <p class="portfolio__comment">Marketing</p>
                   </hgroup>
                 </section>
               </div>
             </li>
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/boxes.jpg"
                     alt="Pudełka"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Projekt Boxes</h2>
-                    <p class="portfolio-p">Aplikacja</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Projekt Boxes</h2>
+                    <p class="portfolio__comment">Aplikacja</p>
                   </hgroup>
                 </section>
               </div>
             </li>
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/webpageInspirationHasNoBorders.jpg"
                     alt="Strona internetowa w monitorze"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Inspiration has no Borders</h2>
-                    <p class="portfolio-p">Strona internetowa</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Inspiration has no Borders</h2>
+                    <p class="portfolio__comment">Strona internetowa</p>
                   </hgroup>
                 </section>
               </div>
             </li>
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/designOfMagazine.jpg"
                     alt="Magazyn"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Magazyn Limited Edition</h2>
-                    <p class="portfolio-p">Dizajn</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Magazyn Limited Edition</h2>
+                    <p class="portfolio__comment">Dizajn</p>
                   </hgroup>
                 </section>
               </div>
             </li>
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/designOfTag.jpg"
                     alt="Etykieta"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Projekt LAB</h2>
-                    <p class="portfolio-p">Marketing</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Projekt LAB</h2>
+                    <p class="portfolio__comment">Marketing</p>
                   </hgroup>
                 </section>
               </div>
             </li>
-            <li class="portfolio-li">
+            <li class="portfolio-example">
               <div>
-                <div class="portfolio-div">
-                  <div class="portfolio-window transition">
+                <div class="portfolio-example__area">
+                  <div class="portfolio-example__bluewindow transition">
                     Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
                     koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowski i ataków na
                     niezabezpieczone serwery konkurencji
                   </div>
                   <img
-                    class="portfolio-img"
+                    class="portfolio__image"
                     src="images/portfolio/laptopDisplayingApplication.jpg"
                     alt="Aplikacja na laptopie"
                     width="370"
                     height="294"
                   />
                 </div>
-                <section class="portfolio-section">
-                  <hgroup class="portfolio-hgroup">
-                    <h2 class="portfolio-h2">Growing Business</h2>
-                    <p class="portfolio-p">Aplikacja</p>
+                <section class="portfolio__section">
+                  <hgroup class="portfolio__titlegroup">
+                    <h2 class="portfolio__title">Growing Business</h2>
+                    <p class="portfolio__comment">Aplikacja</p>
                   </hgroup>
                 </section>
               </div>
