modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/styles.css 	modified:   index.html 	modified:   sass/components/_address.scss 	modified:   sass/components/_effsolutions.scss 	new file:   sass/components/_ourservices.scss 	new file:   sass/components/_ourteam.scss 	new file:   sass/components/_placeholder.scss 	new file:   sass/components/_teammember.scss 	modified:   sass/main.scss

--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
         <div class="ourteam__main">
           <h2 class="ourteam__title">Nasz zespół</h2>
           <ul class="ourteam__list">
-            <li class="ourteam__item">
+            <li class="teammember">
               <img src="images/team/teamFirst.jpg" alt="John Doe" width="270" height="260" />
-              <div class="outeam__name">John Doe</div>
-              <div class="outeam__role">Product Designer</div>
-              <div class="ourteam__socials">
+              <div class="teammember__name">John Doe</div>
+              <div class="teammember__role">Product Designer</div>
+              <div class="teammember__socials">
                 <div class="socials">
                   <div class="socials__area socials--body transition">
                     <div class="socials__subarea socials--body transition">
