modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/styles.css 	modified:   index.html 	new file:   sass/components/_socials.scss 	modified:   sass/main.scss

--- a/index.html
+++ b/index.html
@@ -292,107 +292,113 @@
                 </div>
               </div>
             </li>
-            <li class="ourteam__item">
+             <li class="teammember">
               <img src="images/team/teamSecond.jpg" alt="John Doe" width="270" height="260" />
-              <div class="outeam__name">John Doe</div>
-              <div class="outeam__role">Frontend Developer</div>
-              <div class="socials">
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+              <div class="teammember__name">John Doe</div>
+              <div class="teammember__role">Frontend Developer</div>
+              <div class="teammember__socials">
+                <div class="socials">
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
                   </div>
                 </div>
               </div>
             </li>
-            <li class="ourteam__item">
+             <li class="teammember">
               <img src="images/team/teamThird.jpg" alt="John Doe" width="270" height="260" />
-              <div class="outeam__name">John Doe</div>
-              <div class="outeam__role">Marketing</div>
-              <div class="socials">
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+              <div class="teammember__name">John Doe</div>
+              <div class="teammember__role">Marketing</div>
+              <div class="teammember__socials">
+                <div class="socials">
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
                   </div>
                 </div>
               </div>
             </li>
-            <li class="ourteam__item">
+             <li class="teammember">
               <img src="images/team/teamFourth.jpg" alt="John Doe" width="270" height="260" />
-              <div class="outeam__name">John Doe</div>
-              <div class="outeam__role">UI Designer</div>
-              <div class="socials">
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+              <div class="teammember__name">John Doe</div>
+              <div class="teammember__role">UI Designer</div>
+              <div class="teammember__socials">
+                <div class="socials">
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </div>
                   </div>
-                </div>
-                <div class="socials__area socials--body transition">
-                  <div class="socials__subarea socials--body transition">
-                    <svg class="socials__icon" width="20" height="20">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                  <div class="socials__area socials--body transition">
+                    <div class="socials__subarea socials--body transition">
+                      <svg class="socials__icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </div>
                   </div>
                 </div>
               </div>
