modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   css/styles.css 	modified:   index.html 	new file:   sass/components/_client.scss 	new file:   sass/components/_ourclients.scss 	modified:   sass/main.scss

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 </div>
               </div>
             </li>
-             <li class="teammember">
+            <li class="teammember">
               <img src="images/team/teamSecond.jpg" alt="John Doe" width="270" height="260" />
               <div class="teammember__name">John Doe</div>
               <div class="teammember__role">Frontend Developer</div>
@@ -329,7 +329,7 @@
                 </div>
               </div>
             </li>
-             <li class="teammember">
+            <li class="teammember">
               <img src="images/team/teamThird.jpg" alt="John Doe" width="270" height="260" />
               <div class="teammember__name">John Doe</div>
               <div class="teammember__role">Marketing</div>
@@ -366,7 +366,7 @@
                 </div>
               </div>
             </li>
-             <li class="teammember">
+            <li class="teammember">
               <img src="images/team/teamFourth.jpg" alt="John Doe" width="270" height="260" />
               <div class="teammember__name">John Doe</div>
               <div class="teammember__role">UI Designer</div>
@@ -409,8 +409,8 @@
       <section class="container ourclients section">
         <h2 class="ourclients__title">Nasi klienci</h2>
         <div class="ourclients__section">
-          <div class="client1 ourclients--border button">
-            <svg width="41" height="47" class="icon-address transition">
+          <div class="client ourclients--border button">
+            <svg width="41" height="47" class="client_image transition">
               <use href="./images/icons.svg#icon-Union"></use>
             </svg>
           </div>
