--- a/index.html
+++ b/index.html
@@ -414,28 +414,28 @@
               <use href="./images/icons.svg#icon-Union"></use>
             </svg>
           </div>
-          <div class="client2 ourclients-border button">
-            <svg width="40" height="52" class="icon-address transition">
+          <div class="client ourclients-border button">
+            <svg width="40" height="52" class="client_image transition">
               <use href="./images/icons.svg#icon-group1"></use>
             </svg>
           </div>
-          <div class="client3 ourclients-border button">
-            <svg width="43" height="41" class="icon-address transition">
+          <div class="client ourclients-border button">
+            <svg width="43" height="41" class="client_image transition">
               <use href="./images/icons.svg#icon-Object1"></use>
             </svg>
           </div>
-          <div class="client4 ourclients-border button">
-            <svg width="84" height="41" class="icon-address transition">
+          <div class="client ourclients-border button">
+            <svg width="84" height="41" class="client_image transition">
               <use href="./images/icons.svg#icon-group2"></use>
             </svg>
           </div>
-          <div class="client5 ourclients-border button">
-            <svg width="63" height="45" class="icon-address transition">
+          <div class="client ourclients-border button">
+            <svg width="63" height="45" class="client_image transition">
               <use href="./images/icons.svg#icon-group3"></use>
             </svg>
           </div>
-          <div class="client6 ourclients-border button">
-            <svg width="94" height="44" class="icon-address transition">
+          <div class="client ourclients-border button">
+            <svg width="94" height="44" class="client_image transition">
               <use href="./images/icons.svg#icon-Object4"></use>
             </svg>
           </div>
