--- a/index.html
+++ b/index.html
@@ -409,32 +409,32 @@
       <section class="container ourclients section">
         <h2 class="ourclients__title">Nasi klienci</h2>
         <div class="ourclients__section">
-          <div class="client ourclients--border button">
+          <div class="client client--border button">
             <svg width="41" height="47" class="client_image transition">
               <use href="./images/icons.svg#icon-Union"></use>
             </svg>
           </div>
-          <div class="client ourclients-border button">
+          <div class="client client--border button">
             <svg width="40" height="52" class="client_image transition">
               <use href="./images/icons.svg#icon-group1"></use>
             </svg>
           </div>
-          <div class="client ourclients-border button">
+          <div class="client client--border button">
             <svg width="43" height="41" class="client_image transition">
               <use href="./images/icons.svg#icon-Object1"></use>
             </svg>
           </div>
-          <div class="client ourclients-border button">
+          <div class="client client--border button">
             <svg width="84" height="41" class="client_image transition">
               <use href="./images/icons.svg#icon-group2"></use>
             </svg>
           </div>
-          <div class="client ourclients-border button">
+          <div class="client client--border button">
             <svg width="63" height="45" class="client_image transition">
               <use href="./images/icons.svg#icon-group3"></use>
             </svg>
           </div>
-          <div class="client ourclients-border button">
+          <div class="client client--border button">
             <svg width="94" height="44" class="client_image transition">
               <use href="./images/icons.svg#icon-Object4"></use>
             </svg>
