modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   index.html 	new file:   sass/components/_footer.scss 	modified:   sass/components/_logo.scss 	modified:   sass/main.scss

--- a/index.html
+++ b/index.html
@@ -445,10 +445,10 @@
     <footer class="footer">
       <div class="container footer__area">
         <div>
-          <div class="footer_logo">
-            <a class="logo" href="#">
+          <div class="footer__logo--padding">
+            <a class="logo " href="#">
               <span class="logo__web span">Web</span>
-              <span class="span logo__studio">Studio</span>
+              <span class="span logo__studio logo--whitefont">Studio</span>
             </a>
           </div>
           <address>
@@ -456,7 +456,7 @@
               m. Warszawa, Aleje Jerozolimskie 21
             </div>
             <a
-              class="highlight transition footer__address address-grey address-mailto_padding"
+              class="highlight transition footer__address address-grey footer__address--padding"
               href="mailto:info@example.com"
             >
               info@example.com
